Addressed the two big issues mentioned last time: the view port height being too large and overflowing, and the navbar last item being snagged to side of screen.
we used grid to change the item placement to start center
instead of center, and decreased the view port height.
sites looking pretty good.

Added a intro paragraph for each sub section of skills,
some typography styling, and an animated box shadow
for the "examine" button.

in process of including the intro text for each sub area,
created a sort of silly bug since that text is deleted manually,
toggling the window open and then closed means
the intro text is no longer rendered. Felt like that
delete syntax looked jenky. There should be
an obvious alternative, which we will be working
on next time

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
 @import './styles/nav.scss';
 
 @import './styles/panel.scss';
-// base styles
 
+
+//move these to a partial file
 :root {
   --background: rgba(0, 214, 170, .95);
 }
@@ -19,8 +20,6 @@ body {
   font-weight: 400;
 }
 
-
-// these defaulty styles makes the content overflow from its container- undesirable...
 .content {
   padding-top: 100px;
   height: 200vh;
@@ -29,6 +28,6 @@ body {
   background-blend-mode: multiply;
   background-size: cover;
   display: grid;
-  place-items: center;
+  place-items: start center;
 }
 
