--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -137,6 +137,7 @@ toggle, right after that class */
   nav a {
     opacity: 1;
     position: relative;
+    padding-right: 30px; 
   }
 
 
