--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -24,10 +24,43 @@ with pure react and no css. That makes the info panel a reusable component! */
     }
   }
 
-  .closed-row {
-    
-    border: 2px solid black;
+  section.closed-row {
+    //for the section itself
+    padding: 2rem 0;
+    // background-color: white;
+
+
+    h2 {
+      font-size: 30px;
+      margin-top: 0;
+      font-weight: 400;
+    }
+
+    p {
+      line-height: 1.8;
+    }
+
+
+    .btn-examine {
+
+      background-color: rgb(36, 149,146);
+      border: 2px solid white;
+      text-decoration: none;
+      padding: 1em 2em;
+      display: inline-block;
+      box-shadow: 0px 4px 3px -2px rgba(248, 248, 248, 0.75);
+      transition: all ease-in-out 250ms;
+
+    }
+
+    .btn-examine:hover {
+     transform: translateY(-4px);
+     box-shadow: 0px 8px 10px -1px rgba(255, 240, 240, 0.75); 
+    }
+
   }
+
+  
   
   .dd-trigger {
     font-weight: 900;
